[gd_scene load_steps=2 format=3 uid="uid://ckmntya6bvps6"]

[ext_resource type="Script" path="res://addons/talk_tree/Graph Nodes/local_condition_graph_node.gd" id="1_iqd25"]

[node name="GraphNode" type="GraphNode"]
offset_right = 336.0
offset_bottom = 78.0
mouse_filter = 1
resizable = true
title = "Local Condition"
slot/0/left_enabled = true
slot/0/left_type = 0
slot/0/left_color = Color(1, 1, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color(1, 1, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(1, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(1, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1_iqd25")

[node name="If" type="BoxContainer" parent="."]
layout_mode = 2

[node name="Type" type="OptionButton" parent="If"]
layout_mode = 2
size_flags_horizontal = 0
disabled = true
selected = 0
item_count = 3
popup/item_0/text = "if"
popup/item_0/id = 1
popup/item_1/text = "and"
popup/item_1/id = 1
popup/item_2/text = "or"
popup/item_2/id = 2

[node name="Right" type="LineEdit" parent="If"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="If"]
layout_mode = 2
text = " is equal to "

[node name="Left" type="OptionButton" parent="If"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 2
popup/item_0/text = "True"
popup/item_1/text = "False"
popup/item_1/id = 1

[node name="else_container" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="else" type="Label" parent="else_container"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
text = "else"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 2

[node name="is_top" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
text = "^"

[node name="SpinBox" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[connection signal="toggled" from="HBoxContainer/is_top" to="." method="_on_is_top_toggled"]
[connection signal="value_changed" from="HBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
